--- a/AdvertiserAdGroup.html
+++ b/AdvertiserAdGroup.html
@@ -119,7 +119,7 @@
     <header class="border-b border-strong shadow-sm app-header">
       <div class="flex items-center justify-between px-4 py-2">
         <div class="flex items-center gap-3">
-          <img src="./assets/BeaconLogo.svg" alt="Beacon Logo" class="h-12 w-auto" />
+          <img src="./assets/Beaconlogo.svg" alt="Beacon Logo" class="h-12 w-auto" />
         </div>
 
         <nav class="flex items-center gap-3 ml-auto">
