--- a/Admin_Users.html
+++ b/Admin_Users.html
@@ -136,15 +136,9 @@
 
   <div class="dashboard-container">
     <nav class="sidebar">
-      <div class="logo-section"><div class="logo"><img src="./assets/Eye_Multiview.png" alt="Multiview Logo" style="height: 24px;"></div></div>
+      <div class="logo-section"><div class="logo"><img src="https://www.multiview.com/hubfs/Multiview%20Logo_horizontal_color_300x50.png" alt="Multiview Logo" style="height: 24px;"></div></div>
       <div class="nav-menu">
-        <div class="nav-group">
-          <div class="nav-group-title">Overview</div>
-          <a href="Multiview_Admin_Template.html" class="nav-item"><i class="fas fa-chart-line"></i><span>Dashboard</span></a>
-          <a href="#" class="nav-item"><i class="fas fa-heartbeat"></i><span>System Status</span></a>
-          <a href="#" class="nav-item"><i class="fas fa-bolt"></i><span>Quick Actions</span></a>
-          <a href="#" class="nav-item"><i class="fas fa-clock"></i><span>Recent Activity</span></a>
-        </div>
+        
         <div class="nav-group">
           <div class="nav-group-title">User Management</div>
           <a href="Admin_Users.html" class="nav-item active"><i class="fas fa-users"></i><span>Users</span></a>
@@ -154,12 +148,7 @@
           <a href="Admin_User_Activity_Logs.html" class="nav-item"><i class="fas fa-history"></i><span>User Activity Logs</span></a>
         </div>
         <div class="nav-group">
-          <div class="nav-group-title">Organization</div>
-          <a href="#" class="nav-item"><i class="fas fa-building"></i><span>Agencies</span></a>
-          <a href="#" class="nav-item"><i class="fas fa-handshake"></i><span>Client Accounts</span></a>
-          <a href="#" class="nav-item"><i class="fas fa-sitemap"></i><span>Hierarchy Management</span></a>
-          <a href="#" class="nav-item"><i class="fas fa-palette"></i><span>White-label Settings</span></a>
-        </div>
+          
       </div>
     </nav>
 
